--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <div class="section-header style-2 text-left">
                         <div class="sh-top">
                             <h6 class="cate">WHO WE ARE</h6>
-                            <h3 class="title text-uppercase">We’ve Provide Education & Training More Than 100+ Disable People</h3>
+                            <h3 class="title text-uppercase">We have provided Education & Training More Than 100+ Disable People</h3>
                         </div>
                         <div class="sh-bottom">
                             <p>
